--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,36 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView
-        android:id="@+id/btn1"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="btn1"
-        android:gravity="center"
-        />
-    <TextView
-        android:id="@+id/btn2"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn1"
-        android:text="btn2"
-        android:gravity="center"
+        android:scaleType="fitXY"
+        android:src="@mipmap/image"
         />
-    <Button
-        android:id="@+id/btn3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <com.example.studyapp.FaceShadeView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:count_down_time="20"
+        app:progress_margin="20dp"
+        app:shade_color="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn2"
-        android:text="btn3"
-        android:gravity="center"
         />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
